# hri-vr-anticipatory-action-selection

./: README.md
vr-hr-joint-task/: CMakeLists.txt
vr-hr-joint-task/coppeliasim/: build.bat
vr-hr-joint-task/coppeliasim/include/: dnf_architecture.h  experiment.h
vr-hr-joint-task/coppeliasim/resources/: resources.rc  resources.rc.in
vr-hr-joint-task/coppeliasim/src/: main.cpp  misc.cpp
vr-hr-joint-task/include/: coppeliasim_handler.h  dnf_composer_handler.h  event_logger.h  misc.h
vr-hr-joint-task/resources/: architecture-parameters.md  resources.h
vr-hr-joint-task/src/: coppeliasim_handler.cpp  dnf_architecture.cpp  dnf_composer_handler.cpp  event_logger.cpp  experiment.cpp
